# demodjango

./: .dockerignore  .env.sample  .envrc.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  .trufflehogignore  Aptfile  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  browser_tests.sh  buildpack.json  codecov.yml  db.sqlite3  demodjango.sqlite  demodjango.sqlite3  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  manage.py  migrate.py  pyproject.toml  pytest.ini  release-config.json  requirements.in  requirements.txt  sample_file.txt  smoke_tests.sh
.circleci/: config.yml
.copilot/: buildspec.yml  config.yml
.copilot/phases/: install.sh  pre_build.sh
.github/: pull_request_template.md
.github/workflows/: python-unit-tests.yml  release.yml  test.yml  trufflehog.yml
app/: checks.py  models.py  urls.py  util.py  views.py
app/check/: check.py  check_http.py  report.py
app/management/commands/: load_defaults.py
app/migrations/: 0001_initial.py  0002_sampletable_sample_email.py  0003_scheduledtask.py  0004_rename_sampleid_sampletable_sample_id_and_more.py
app/views/: report.html
celery-worker/: tasks.py
celery_worker/: healthcheck.py  liveness_probe.py  tasks.py
codebuild/: process.yml
codebuild/web/: buildspec.yml
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
configuration/: buildspec-image.yml
copilot/: .workspace  process.yml
copilot/demodjango/: manifest.yml
copilot/demodjango/addons/: demodjango-cluster.yml
copilot/web/: buildspec.yml
demodjango/: asgi.py  asim_formatter.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: entry.sh
tests/: .test.env  api_urls.py
tests/app/: conftest.py  test_models.py  test_utils.py  test_views.py
tests/app/check/: test_http.py  test_report.py
tests/browser/: run.sh
tests/browser/ip_filter_check/: test_ipfilter.py
tests/browser/maintenance_pages/offline/: test_landing_page_offline.py
tests/browser/smoke/: test_api.py  test_ipfilter.py  test_landing_page.py  test_sso.py
tests/browser/src/: landing_page_checks.py
tests/smoke/: test_landing_page.py
