[tool.poetry]
name = "demodjango"
# See git tags for versioning
version = "0.0.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.33"
celery = "^5.3.6"
dbt-copilot-python = "^0.2.0"
dj-database-url = "^2.1.0"
django = "^4.2.11"
django-environ = "^0.11.2"
django-ipware = "^3.0.7"
django-log-formatter-asim = "^0.0.4"
django-requestlogs = "^0.8"
gunicorn = "^22.0.0"
opensearch-py = "^2.4.2"
pip-tools = "^7.3.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
requests = "^2.31.0"
tenacity = "^8.2.3"
whitenoise = "^6.6.0"
normality = "^2.5.0"
jinja2 = "^3.1.4"
django-celery-beat = "^2.5.0"
sentry-sdk = "^1.42.0"
pytest-env = "^1.1.3"
pytest-django = "^4.8.0"
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
pytest-playwright = "^0.4.4"

[tool.pytest_env]
DJANGO_SETTINGS_MODULE = "demodjango.settings"
