[tool.poetry]
name = "demodjango"
# See git tags for versioning
version = "0.0.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.33"
celery = "^5.3.6"
dbt-copilot-python = "^0.2.0"
dj-database-url = "^2.1.0"
django = "^4.2.16"
django-environ = "^0.11.2"
django-ipware = "^3.0.7"
django-log-formatter-asim = "^0.0.4"
django-requestlogs = "^0.8"
gunicorn = "^22.0.0"
opensearch-py = "^2.4.2"
pip-tools = "^7.3.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
requests = "^2.32.2"
# Tenacity pinned for now because of https://github.com/jd/tenacity/issues/471
tenacity = ">=8.2.3,<8.4.0"
normality = "^2.5.0"
jinja2 = "^3.1.4"
django-celery-beat = {git = "https://github.com/kwongtn/django-celery-beat", rev = "fix/restrict-setuptools-to-max-v71"}
sentry-sdk = "^2.8.0"
pytest-env = "^1.1.3"
pytest-django = "^4.8.0"
pytest = "^8.1.1"
whitenoise = "^6.7.0"
freezegun = "^1.5.1"
pytest-dotenv = "^0.5.2"
beautifulsoup4 = "^4.12.3"
django-staff-sso-client = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest-playwright = "^0.4.4"
pre-commit = "^3.8.0"

[tool.pytest_env]
DJANGO_SETTINGS_MODULE = "demodjango.settings"
